Change span font size

--- a/style.css
+++ b/style.css
@@ -248,6 +248,10 @@ footer {
       justify-content: center;
    }
 
+   span {
+      font-size: 3rem;
+   }
+
    header {
       display: flex;
       flex-flow: column;
