--- a/style.css
+++ b/style.css
@@ -267,6 +267,10 @@ footer {
       font-size: 4.2em;
    }
 
+   header span {
+      font-size: 6.0rem;
+   } 
+
    header h2 {
       font-size: 3.2em;
       margin-left: 1.5rem;
