--- a/style.css
+++ b/style.css
@@ -296,13 +296,6 @@ footer {
    }
 
 
-   main {
-      display: none; /*block*/
-      order: 1;
-      margin-bottom: 2rem;
-   }
-
-
    p.Resume {
       display: block; /*block*/
       margin-left: 1em;
@@ -314,32 +307,6 @@ footer {
       font-size: 3.0rem;
    }
 
-article {
-     display: flex;
-     font-size: 1.5rem;
-     
-  }
-
-   .Year {
-      flex: 0 0 auto;
-      width: 2.0em;
-      padding: 0.5em 0.5em 0.5em 0; margin-right: 0.2em;
-      font-size: 2rem;
-      font-weight: bold;
-   }
-
-main ul {
-     padding-top: 1.5em;
-  }
-
-main li {
-   font-size: 1.5rem;
-  }
-
-main li:first-child {
-     margin-bottom: 0rem;
-  }
-  
 
 aside {
      order: 4;
@@ -355,22 +322,11 @@ aside h2 {
       padding-left: 1em;
    }
 
-#PersonalInfo {
-   display: none;
-}
 
-#Education {
-      display: none; /*block*/
-      order: 3;
-      margin-bottom: 2rem;
-      font-size: 1.5rem;
+aside h4 {
+   margin-top: 0;
+   margin-bottom: 1rem;
    }
-
-#Education li {
-      width: 100%;
-      font-size: 1.5rem; 
-   }
-
 
    footer {
      order: 5;
