Update encuesta content

--- a/style.css
+++ b/style.css
@@ -165,15 +165,12 @@ aside ul {
    width: 100%;
 }
 
-#Skills {
+#Encuesta {
       width: 100%;
       padding-bottom: 1em;
       border-bottom: 0;
    }
 
-#Skills span {
-   color: black; 
-}
 
 
 .ProgressBar {
