--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ ul {
 }
 
 header {
-   grid-area: B;
    margin-bottom: 2rem;
    justify-content: space-between;
    background-color: #64C4BC;
@@ -38,6 +37,7 @@ header span {
 
 header h1 {
    font-size: 3em;
+   margin-top: 0;
    margin-bottom: 0.5rem;
    padding-right: 0;
 }
@@ -68,7 +68,6 @@ header p {
 
 
 main {
-   grid-area: D;
    margin-bottom: 1rem;
    background-color: #fff;
 }
@@ -100,18 +99,21 @@ main ul {
 
 #Encuesta article {
    border-bottom: 1px solid black;
-   margin-bottom: 2rem;
+   margin-bottom: 1rem;
    }
+
+
+
 
 .ProgressBar {
    background-color: #FEFEFE;
-   margin-bottom: 2rem;
+   margin-bottom: 1rem;
    border-bottom: 0;
 }
 
 .ProgressBar div {
-   height:1em;
-   background-color: #64C4BC;
+   height:3em;
+   background-color: gold; /*64C4BC*/
    margin-top: 0;
    border-bottom: 0;
 
@@ -188,8 +190,11 @@ footer {
    }
 
    span {
-      font-size: 3rem;
+      font-size: 5rem;
    }
+
+
+
 
    header {
       display: flex;
@@ -199,20 +204,22 @@ footer {
    }
 
    header h1 {
-      margin-top: 1em;
+      margin-top: 1rem;
       margin-left: 1.5rem;
       margin-bottom: 0em;   
       font-size: 4.2em;
    }
 
    header span {
-      font-size: 6.0rem;
+      font-size: 7.0rem;
    } 
 
    header h2 {
-      font-size: 3.2em;
+      font-size: 5.0em;
+      margin-top: 0rem;
       margin-left: 1.5rem;
       margin-bottom: 0;
+      padding-bottom: 0rem;
    }
 
    
@@ -229,13 +236,9 @@ footer {
       font-size: 2.5rem;
    }
 
-   .HeaderP {
-      margin-bottom: 0.9em;
-   }
-
 
 .TopH2 {
-      font-size: 3.0rem;
+      font-size: 4.0rem;
    }
 
 
@@ -253,10 +256,19 @@ main h2 {
    }
 
 
-main h4 {
+.Votantes {
    margin-top: 0;
    margin-bottom: 1rem;
+   font-size: 2em;   
+   padding: 0;
+   font-weight: bold;
    }
+
+.Votantes li {
+   display: inline;
+}
+
+
 
    footer {
      display: flex; /*flex*/
@@ -264,7 +276,7 @@ main h4 {
      align-self: flex-start;
      flex-direction: column;
      justify-content: flex-start;
-     font-size: 2rem;
+     font-size: 3rem;
      background-color: #EEEEEE;
    }
 
