--- a/style.css
+++ b/style.css
@@ -98,14 +98,21 @@ main ul {
    margin-bottom: 2rem;
    }
 
+
 .Faltantes h3 {
   font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+h4 {
+ font-size: 2rem;
+ margin: 1rem;
 }
 
 .Faltantes h4 {
  color: red;
  font-size: 2rem;
- margin: 0 0 1rem;
+ margin: 1rem;
 }
 
 
