--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 html,  body{  
    font-family: Helvetica, sans-serif;
-   font-size: 100%;
+   font-size: 95%;
    background-color: #282626;
 }
 
@@ -14,6 +14,7 @@ span {
 
 h1 {
    display: block;
+   padding: 30% 30%;
 }
 
 
