--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 
 html,  body{  
    font-family: Helvetica, sans-serif;
-   font-size: 95%;
+   font-size: 130%;
    background-color: #282626;
+   text-align: center;
 }
 
 span {
@@ -14,7 +15,7 @@ span {
 
 h1 {
    display: block;
-   padding: 30% 30%;
+   padding-top: 25%;
 }
 
 
